# dave_v

./: .gitignore  CMakeLists.txt  README.md  dave.cpp  dave.h  dave_v.cpp  dave_v.h  level.cpp  tiles.cpp
src/: dave_v.cpp  dave_v.h
src/entities/: components.h  ecs_constants.h  ecs_types.h  entitity.cpp  entity.h  game_assets.cpp  indexes.h
src/systems/: gravity.cpp  gravity.h  mover.cpp  mover.h  renderer.cpp  renderer.h
src/window/: game_window.cpp  game_window.h
